continuer la transfomation en application standalone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ static.version=${project.version}
 
 rest.client.timeout.default=2500
 
-spring.data.mongodb.uri=mongodb://92.243.29.40:27017/dynaMock
+#spring.data.mongodb.uri=mongodb://92.243.29.40:27017/dynaMock
