--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,10 @@
 					<groupId>org.webjars</groupId>
 					<artifactId>angularjs</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.webjars</groupId>
+					<artifactId>bootstrap</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -152,6 +156,13 @@
 			<artifactId>underscorejs</artifactId>
 			<version>1.6.0-3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>ace</artifactId>
+			<version>1.1.3</version>
+		</dependency>
+		
 		<!-- ======================================================================================= -->
 		<!-- ==================================== Apache =========================================== -->
 		<!-- ======================================================================================= -->
