Ajout de paramètres mongo par défaut

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,5 @@
 project.info.version=${project.version}
 project.info.env=
 
-# Version static
-static.version=${project.version}
-
-rest.client.timeout.default=2500
-
-#spring.data.mongodb.uri=mongodb://92.243.29.40:27017/dynaMock
+#paramètre db par défaut
+spring.data.mongodb.uri=mongodb://localhost:27017/dynaMock
