--- a/pom.xml
+++ b/pom.xml
@@ -156,13 +156,25 @@
 			<artifactId>underscorejs</artifactId>
 			<version>1.6.0-3</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>ace</artifactId>
 			<version>1.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-ui</artifactId>
+			<version>1.11.0-1</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.webjars</groupId>
+					<artifactId>jquery</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		
+
 		<!-- ======================================================================================= -->
 		<!-- ==================================== Apache =========================================== -->
 		<!-- ======================================================================================= -->
