--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
 		<bootstrap.version>3.1.1</bootstrap.version>
 		<jquery.version>1.11.0</jquery.version>
 		<angularjs.version>1.2.12</angularjs.version>
-		<angular-ui-bootstrap.version>0.10.0</angular-ui-bootstrap.version>
+		<angular-ui-bootstrap.version>0.11.0-2</angular-ui-bootstrap.version>
 		<angular-ui-router.version>0.2.10</angular-ui-router.version>
 	</properties>
 
